--- a/Backend/flask_api/requirements.txt
+++ b/Backend/flask_api/requirements.txt
@@ -1,7 +1,10 @@
 asttokens==2.0.5
 blis==0.7.4
+CacheControl==0.12.6
+cachetools==4.2.2
 catalogue==2.0.4
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
@@ -10,14 +13,28 @@ decorator==4.4.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 executing==0.6.0
 firebase==3.0.1
+firebase-admin==5.0.0
 Flask==1.1.2
+google-api-core==1.26.3
+google-api-python-client==2.3.0
+google-auth==1.30.0
+google-auth-httplib2==0.1.0
+google-cloud-core==1.6.0
+google-cloud-firestore==2.1.1
+google-cloud-storage==1.38.0
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.53.0
 graphviz==0.16
+grpcio==1.37.1
+httplib2==0.19.1
 icecream==2.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
 MarkupSafe==1.1.1
+msgpack==1.0.2
 murmurhash==1.0.5
 networkx==2.5.1
 nltk==3.6.2
@@ -25,12 +42,19 @@ numpy==1.20.2
 packaging==20.9
 pathy==0.5.2
 preshed==3.0.5
+proto-plus==1.18.1
+protobuf==3.15.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pydantic==1.7.3
 Pygments==2.9.0
 pyparsing==2.4.7
 pytextrank==3.1.1
+pytz==2021.1
 regex==2021.4.4
 requests==2.25.1
+rsa==4.7.2
 six==1.16.0
 smart-open==3.0.0
 spacy==3.0.6
@@ -39,6 +63,7 @@ srsly==2.4.1
 thinc==8.0.3
 tqdm==4.60.0
 typer==0.3.2
+uritemplate==3.0.1
 urllib3==1.26.4
 wasabi==0.8.2
 Werkzeug==1.0.1
